# tesseract-mcp

./: .gitignore  AGENTS.md  README.md  mcp-servers.json  pyproject.toml
docs/: ARCHITECTURE.md
evals/: README.md  golden.yaml
scripts/: install_conventions.py  librarian-task.cmd  migrate-vault.ps1  probe_server.py
scripts/hooks/: session-start.py  stop-nudge.py
server/: .env.example  Caddyfile  DEPLOY.md  docker-compose.yml
server/couchdb-config/: local.ini
skills/clip/: SKILL.md
skills/connections/: SKILL.md
skills/decide/: SKILL.md
skills/digest/: SKILL.md
skills/distill/: SKILL.md
skills/dossier/: SKILL.md
skills/recall/: SKILL.md
skills/resume/: SKILL.md
skills/rounds/: SKILL.md
src/tesseract_mcp/: __init__.py  blocking.py  bm25.py  cache.py  cleanup.py  consolidate.py  conventions.py  embeddings.py  evals.py  extractor.py  graph.py  graphstore.py  hook_sync.py  hybrid.py  indexer.py  (+15 more)
tests/: conftest.py  test_blocking.py  test_bm25.py  test_cache.py  test_cleanup.py  test_consolidate.py  test_embeddings.py  test_evals.py  test_extractor.py  test_graph.py  test_graphstore.py  test_hook_scripts.py  test_hook_sync.py  test_hybrid.py  test_indexer.py  test_install_conventions.py  test_librarian.py  test_mcp_sync.py  test_mover.py  test_notes.py  test_organizer.py  test_provision.py  test_recall.py  test_sanity.py  test_sc_adapter.py  test_search.py  test_server.py  test_sheets.py  test_skill_sync.py  test_skills.py  test_tasks.py  test_vault.py
vault/: constitution.md  root-guide.md
vault-template/: community-plugins.json  plugins.json
(+65 files in other folders)
